Lots of cleanup

--- a/analysis/temp.ipynb
+++ b/analysis/temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4106fdd4",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,8 @@
     "import numpy as np\n",
     "import cupy as cp\n",
     "import sys\n",
-    "sys.path.append('/mnt/d/packing/code/core/')\n",
+    "import os\n",
+    "sys.path.insert(0, os.path.join(os.getcwd(), '../core'))\n",
     "import pack_cuda\n",
     "\n",
     "def make_input(N):\n",
