--- a/analysis/test_concurrent.ipynb
+++ b/analysis/test_concurrent.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4106fdd4",
    "metadata": {},
    "outputs": [
@@ -33,16 +33,17 @@
      "text": [
       "local\n",
       "Blocks\tCalls/sec\tElapsed(s)\n",
-      "1\t535\t\t0.019\n",
-      "2\t537\t\t0.019\n",
-      "4\t537\t\t0.019\n",
-      "8\t504\t\t0.020\n",
-      "16\t463\t\t0.022\n",
-      "32\t280\t\t0.036\n",
-      "64\t120\t\t0.083\n",
-      "128\t67\t\t0.148\n",
-      "256\t35\t\t0.279\n",
-      "512\t18\t\t0.533\n"
+      "1\t586\t\t0.017\n",
+      "2\t591\t\t0.017\n",
+      "4\t585\t\t0.017\n",
+      "8\t565\t\t0.018\n",
+      "16\t514\t\t0.019\n",
+      "32\t300\t\t0.033\n",
+      "64\t80\t\t0.124\n",
+      "128\t40\t\t0.249\n",
+      "256\t26\t\t0.381\n",
+      "512\t11\t\t0.844\n",
+      "1024\t6\t\t1.586\n"
      ]
     }
    ],
@@ -57,9 +58,10 @@
     "import sys\n",
     "\n",
     "# Clear and set path\n",
+    "import os\n",
     "if '/mnt/d/packing/code/core/' in sys.path:\n",
     "    sys.path.remove('/mnt/d/packing/code/core/')\n",
-    "sys.path.insert(0, '/mnt/d/packing/code/core/')\n",
+    "sys.path.insert(0, os.path.join(os.getcwd(), '../core'))\n",
     "\n",
     "import pack_cuda\n",
     "pack_cuda.USE_FLOAT32 = True\n",
@@ -112,7 +114,7 @@
     "\n",
     "cp.cuda.Device().synchronize()\n",
     "\n",
-    "packs = [1, 2, 4, 8, 16, 32, 64, 128, 256, 512]\n",
+    "packs = [1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024]\n",
     "print(\"Blocks\\tCalls/sec\\tElapsed(s)\")\n",
     "for b in packs:\n",
     "    cps, t = run_trial(b, iters, xyt, xyt)\n",
@@ -195,14 +197,14 @@
       "\n",
       "=== Testing with N=50 (50 threads/block) ===\n",
       "Blocks\tCalls/sec\tElapsed(s)\n",
-      "1\t2681\t\t0.015\n",
-      "2\t2828\t\t0.014\n",
-      "4\t2679\t\t0.015\n",
-      "8\t2071\t\t0.019\n",
-      "16\t1248\t\t0.032\n",
-      "32\t608\t\t0.066\n",
-      "64\t375\t\t0.107\n",
-      "128\t138\t\t0.290\n"
+      "1\t1525\t\t0.026\n",
+      "2\t1472\t\t0.027\n",
+      "4\t1472\t\t0.027\n",
+      "8\t1151\t\t0.035\n",
+      "16\t1307\t\t0.031\n",
+      "32\t724\t\t0.055\n",
+      "64\t389\t\t0.103\n",
+      "128\t161\t\t0.248\n"
      ]
     }
    ],
@@ -234,13 +236,13 @@
       "\n",
       "=== Comparing multi-ensemble vs separate kernel launches (N=20) ===\n",
       "Blocks\tMulti\tSeparate\n",
-      "1\t578\t636\n",
-      "2\t590\t323\n",
-      "4\t567\t160\n",
-      "8\t563\t80\n",
-      "16\t506\t40\n",
-      "32\t311\t20\n",
-      "64\t126\t10\n"
+      "1\t384\t445\n",
+      "2\t387\t219\n",
+      "4\t381\t108\n",
+      "8\t347\t66\n",
+      "16\t524\t32\n",
+      "32\t174\t15\n",
+      "64\t124\t7\n"
      ]
     }
    ],
