--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -35,12 +35,67 @@
       "  Vectorized check for AreaCost\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
+      "Testing BoundaryDistanceCost\n",
+      "\n",
+      "Testing CostDummy\n",
+      "[0.]\n",
+      "[0.]\n",
+      "back to 1e-4 later, also below\n",
+      "[0.]\n",
+      "[0.]\n",
+      "back to 1e-4 later, also below\n",
+      "  Vectorized check for CostDummy\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing AreaCost\n",
+      "[0.25]\n",
+      "[0.25]\n",
+      "back to 1e-4 later, also below\n",
+      "[4.]\n",
+      "[4.]\n",
+      "back to 1e-4 later, also below\n",
+      "  Vectorized check for AreaCost\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing BoundaryDistanceCost\n",
+      "[6.89014151901359]\n",
+      "[6.89014151901359]\n",
+      "back to 1e-4 later, also below\n",
+      "[6.89014151901359]\n",
+      "[6.89014151901359]\n",
+      "back to 1e-4 later, also below\n",
+      "[0.16375189244210733]\n",
+      "[0.1637518924421072]\n",
+      "back to 1e-4 later, also below\n",
+      "[0.16375189244210733]\n",
+      "[0.1637518924421072]\n",
+      "back to 1e-4 later, also below\n",
+      "  Vectorized check for BoundaryDistanceCost\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
       "Testing BoundaryCost\n",
-      "[2.1628119945526123]\n",
+      "  Vectorized check for BoundaryDistanceCost\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing BoundaryCost\n",
+      "[2.162812]\n",
       "[2.1628126218552532]\n",
       "back to 1e-4 later, also below\n",
-      "[0.1347944736480713]\n",
+      "[2.162812]\n",
+      "[2.1628126218552532]\n",
+      "back to 1e-4 later, also below\n",
+      "[0.13479447]\n",
       "[0.13479456425163105]\n",
+      "back to 1e-4 later, also below\n",
+      "[0.13479447]\n",
+      "[0.13479456425163105]\n",
+      "back to 1e-4 later, also below\n",
+      "  Vectorized check for BoundaryCost\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing CollisionCostOverlappingArea\n",
+      "[2.2351825]\n",
+      "[2.2351832504299307]\n",
       "back to 1e-4 later, also below\n",
       "  Vectorized check for BoundaryCost\n",
       "  ✓ Vectorized results exactly match individual calls\n",
@@ -52,6 +107,16 @@
       "[1.7478586]\n",
       "[1.747858502905263]\n",
       "back to 1e-4 later, also below\n",
+      "[1.7478586]\n",
+      "[1.747858502905263]\n",
+      "back to 1e-4 later, also below\n",
+      "  Vectorized check for CollisionCostOverlappingArea\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing CostCompound\n",
+      "[2.4128119945526123]\n",
+      "[2.4128126218552532]\n",
+      "back to 1e-4 later, also below\n",
       "  Vectorized check for CollisionCostOverlappingArea\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
@@ -62,6 +127,12 @@
       "[4.134794473648071]\n",
       "[4.1347945642516315]\n",
       "back to 1e-4 later, also below\n",
+      "[4.134794473648071]\n",
+      "[4.1347945642516315]\n",
+      "back to 1e-4 later, also below\n",
+      "  Vectorized check for CostCompound\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "All tests passed.\n",
       "  Vectorized check for CostCompound\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "All tests passed.\n"
@@ -90,7 +161,8 @@
    ],
    "source": [
     "import sys\n",
-    "sys.path.append('/mnt/d/packing/code/core/')\n",
+    "import os\n",
+    "sys.path.insert(0, os.path.join(os.getcwd(), 'core'))\n",
     "import pack_test\n",
     "import importlib\n",
     "pack_test.run_all_tests()"
