--- a/analysis/basic_functionality.ipynb
+++ b/analysis/basic_functionality.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a927a9d6-cad3-401d-8b9f-6493a2c0848f",
    "metadata": {
     "tags": []
@@ -39,7 +39,8 @@
    ],
    "source": [
     "import sys\n",
-    "sys.path.append('/mnt/d/packing/code/core/')\n",
+    "import os\n",
+    "sys.path.insert(0, os.path.join(os.getcwd(), '../core'))\n",
     "import kaggle_support as kgs\n",
     "import importlib\n",
     "import pack_vis\n",
