--- a/analysis/test_concurrent.ipynb
+++ b/analysis/test_concurrent.ipynb
@@ -32,24 +32,58 @@
      "output_type": "stream",
      "text": [
       "local\n",
+      "============================================================\n",
+      "TEST 1: Block Size Scaling (Single Stream)\n",
+      "============================================================\n",
       "Blocks\tCalls/sec\tElapsed(s)\n",
-      "1\t586\t\t0.017\n",
-      "2\t591\t\t0.017\n",
-      "4\t585\t\t0.017\n",
-      "8\t565\t\t0.018\n",
-      "16\t514\t\t0.019\n",
-      "32\t300\t\t0.033\n",
-      "64\t80\t\t0.124\n",
-      "128\t40\t\t0.249\n",
-      "256\t26\t\t0.381\n",
-      "512\t11\t\t0.844\n",
-      "1024\t6\t\t1.586\n"
+      "1\t3151\t\t0.032\n",
+      "2\t2627\t\t0.038\n",
+      "4\t2677\t\t0.037\n",
+      "8\t1676\t\t0.060\n",
+      "============================================================\n",
+      "TEST 1: Block Size Scaling (Single Stream)\n",
+      "============================================================\n",
+      "Blocks\tCalls/sec\tElapsed(s)\n",
+      "1\t3151\t\t0.032\n",
+      "2\t2627\t\t0.038\n",
+      "4\t2677\t\t0.037\n",
+      "8\t1676\t\t0.060\n",
+      "16\t1203\t\t0.083\n",
+      "32\t540\t\t0.185\n",
+      "16\t1203\t\t0.083\n",
+      "32\t540\t\t0.185\n",
+      "64\t271\t\t0.368\n",
+      "64\t271\t\t0.368\n",
+      "128\t177\t\t0.562\n",
+      "\n",
+      "============================================================\n",
+      "TEST 2: Parallel Kernel Execution (Multiple Streams)\n",
+      "============================================================\n",
+      "Streams\tBlocks/Stream\tCalls/sec\tElapsed(s)\n",
+      "1\t1\t\t5045\t\t0.020\n",
+      "2\t1\t\t4443\t\t0.045\n",
+      "4\t1\t\t3763\t\t0.106\n",
+      "128\t177\t\t0.562\n",
+      "\n",
+      "============================================================\n",
+      "TEST 2: Parallel Kernel Execution (Multiple Streams)\n",
+      "============================================================\n",
+      "Streams\tBlocks/Stream\tCalls/sec\tElapsed(s)\n",
+      "1\t1\t\t5045\t\t0.020\n",
+      "2\t1\t\t4443\t\t0.045\n",
+      "4\t1\t\t3763\t\t0.106\n",
+      "8\t1\t\t4053\t\t0.197\n",
+      "8\t1\t\t4053\t\t0.197\n",
+      "16\t1\t\t4086\t\t0.391\n",
+      "16\t1\t\t4086\t\t0.391\n",
+      "32\t1\t\t3651\t\t0.876\n",
+      "32\t1\t\t3651\t\t0.876\n"
      ]
     }
    ],
    "source": [
     "# Multi-block kernel concurrency test\n",
-    "# Tests the new multi_ensemble_kernel which launches one block per ensemble\n",
+    "# Tests both block size scaling and parallel kernel execution in multiple streams\n",
     "\n",
     "import time\n",
     "import math\n",
@@ -75,7 +109,8 @@
     "    xyt = np.stack([x, y, t], axis=1).astype(np.float64)\n",
     "    return xyt\n",
     "\n",
-    "def run_trial(num_blocks, iters_per_call, xyt1_np, xyt2_np):\n",
+    "def run_trial_single_stream(num_blocks, iters_per_call, xyt1_np, xyt2_np):\n",
+    "    \"\"\"Test: vary number of blocks (ensembles) in single stream\"\"\"\n",
     "    pack_cuda._ensure_initialized()\n",
     "    \n",
     "    # Convert to GPU once to avoid repeated pinned memory allocations\n",
@@ -103,254 +138,79 @@
     "    calls_per_sec = total_calls / elapsed\n",
     "    return calls_per_sec, elapsed\n",
     "\n",
+    "def run_trial_multi_stream(num_streams, iters_per_stream, num_blocks_per_stream, xyt1_np, xyt2_np):\n",
+    "    \"\"\"Test: launch multiple kernels in parallel via streams\"\"\"\n",
+    "    pack_cuda._ensure_initialized()\n",
+    "    \n",
+    "    # Convert to GPU once\n",
+    "    xyt1_gpu = cp.asarray(xyt1_np, dtype=cp.float32 if pack_cuda.USE_FLOAT32 else cp.float64)\n",
+    "    xyt2_gpu = cp.asarray(xyt2_np, dtype=cp.float32 if pack_cuda.USE_FLOAT32 else cp.float64)\n",
+    "    \n",
+    "    # Create list of ensembles for each stream\n",
+    "    xyt1_list = [xyt1_gpu for _ in range(num_blocks_per_stream)]\n",
+    "    xyt2_list = [xyt2_gpu for _ in range(num_blocks_per_stream)]\n",
+    "    \n",
+    "    # Create multiple streams\n",
+    "    streams = [cp.cuda.Stream(non_blocking=True) for _ in range(num_streams)]\n",
+    "    \n",
+    "    # Warmup\n",
+    "    for stream in streams:\n",
+    "        with stream:\n",
+    "            pack_cuda.overlap_multi_ensemble(xyt1_list, xyt2_list, compute_grad=True)\n",
+    "    cp.cuda.Device().synchronize()\n",
+    "    \n",
+    "    # Timed run: launch kernels on different streams (back-to-back)\n",
+    "    cp.cuda.Device().synchronize()\n",
+    "    start = time.perf_counter()\n",
+    "    for i in range(iters_per_stream):\n",
+    "        for s_idx, stream in enumerate(streams):\n",
+    "            with stream:\n",
+    "                pack_cuda.overlap_multi_ensemble(xyt1_list, xyt2_list, compute_grad=True)\n",
+    "    cp.cuda.Device().synchronize()\n",
+    "    end = time.perf_counter()\n",
+    "    \n",
+    "    elapsed = end - start\n",
+    "    total_kernel_calls = iters_per_stream * num_streams\n",
+    "    calls_per_sec = total_kernel_calls / elapsed\n",
+    "    return calls_per_sec, elapsed\n",
+    "\n",
     "\n",
     "# Initialize everything first\n",
     "pack_cuda._ensure_initialized()\n",
     "\n",
     "# Parameters to tune\n",
-    "N = 200\n",
-    "iters = 10\n",
+    "N = 20\n",
+    "iters = 100\n",
     "xyt = make_input(N)\n",
     "\n",
     "cp.cuda.Device().synchronize()\n",
     "\n",
-    "packs = [1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024]\n",
-    "print(\"Blocks\\tCalls/sec\\tElapsed(s)\")\n",
-    "for b in packs:\n",
-    "    cps, t = run_trial(b, iters, xyt, xyt)\n",
+    "# print(\"=\" * 60)\n",
+    "# print(\"TEST 1: Block Size Scaling (Single Stream)\")\n",
+    "# print(\"=\" * 60)\n",
+    "# print(\"Blocks\\tCalls/sec\\tElapsed(s)\")\n",
+    "# packs = [1, 2, 4, 8, 16, 32, 64, 128]\n",
+    "# for b in packs:\n",
+    "#     cps, t = run_trial_single_stream(b, iters, xyt, xyt)\n",
+    "#     cp.cuda.Device().synchronize()\n",
+    "#     print(f\"{b}\\t{int(cps)}\\t\\t{t:.3f}\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"TEST 2: Parallel Kernel Execution (Multiple Streams)\")\n",
+    "print(\"=\" * 60)\n",
+    "print(\"Streams\\tBlocks/Stream\\tCalls/sec\\tElapsed(s)\")\n",
+    "num_blocks_per_stream = 1  # Fixed block count\n",
+    "stream_counts = [1, 2, 4, 8, 16, 32]\n",
+    "for num_streams in stream_counts:\n",
+    "    cps, t = run_trial_multi_stream(num_streams, iters, num_blocks_per_stream, xyt, xyt)\n",
     "    cp.cuda.Device().synchronize()\n",
-    "    print(f\"{b}\\t{int(cps)}\\t\\t{t:.3f}\")\n"
+    "    print(f\"{num_streams}\\t{num_blocks_per_stream}\\t\\t{int(cps)}\\t\\t{t:.3f}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4485d30f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "d87ca493",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GPU: NVIDIA GeForce RTX 4070 Ti\n",
-      "Number of SMs: 60\n",
-      "Max threads per SM: 1536\n",
-      "Max threads per block: 1024\n",
-      "Max blocks per SM: 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Check GPU properties\n",
-    "props = cp.cuda.runtime.getDeviceProperties(0)\n",
-    "print(f\"GPU: {props['name'].decode()}\")\n",
-    "print(f\"Number of SMs: {props['multiProcessorCount']}\")\n",
-    "print(f\"Max threads per SM: {props['maxThreadsPerMultiProcessor']}\")\n",
-    "print(f\"Max threads per block: {props['maxThreadsPerBlock']}\")\n",
-    "print(f\"Max blocks per SM: {props['maxThreadsPerMultiProcessor'] // props['maxThreadsPerBlock']}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "7b7f0df0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CUDA version: 12080\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"CUDA version: {cp.cuda.runtime.runtimeGetVersion()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51ae781f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "ac71fe29",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "=== Testing with N=50 (50 threads/block) ===\n",
-      "Blocks\tCalls/sec\tElapsed(s)\n",
-      "1\t1525\t\t0.026\n",
-      "2\t1472\t\t0.027\n",
-      "4\t1472\t\t0.027\n",
-      "8\t1151\t\t0.035\n",
-      "16\t1307\t\t0.031\n",
-      "32\t724\t\t0.055\n",
-      "64\t389\t\t0.103\n",
-      "128\t161\t\t0.248\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Test with smaller N to see if occupancy improves\n",
-    "N_small = 50\n",
-    "iters_small = 40\n",
-    "xyt_small = make_input(N_small)\n",
-    "\n",
-    "packs_test = [1, 2, 4, 8, 16, 32, 64, 128]\n",
-    "print(\"\\n=== Testing with N=50 (50 threads/block) ===\")\n",
-    "print(\"Blocks\\tCalls/sec\\tElapsed(s)\")\n",
-    "for b in packs_test:\n",
-    "    cps, t = run_trial(b, iters_small, xyt_small, xyt_small)\n",
-    "    cp.cuda.Device().synchronize()\n",
-    "    print(f\"{b}\\t{int(cps)}\\t\\t{t:.3f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "215cb002",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "=== Comparing multi-ensemble vs separate kernel launches (N=20) ===\n",
-      "Blocks\tMulti\tSeparate\n",
-      "1\t384\t445\n",
-      "2\t387\t219\n",
-      "4\t381\t108\n",
-      "8\t347\t66\n",
-      "16\t524\t32\n",
-      "32\t174\t15\n",
-      "64\t124\t7\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Test: Compare multi_ensemble vs launching separate kernels\n",
-    "# To see if the issue is with the multi-ensemble kernel itself\n",
-    "\n",
-    "def run_separate_kernels(num_blocks, iters_per_call, xyt1_np, xyt2_np):\n",
-    "    \"\"\"Launch num_blocks separate single-block kernels instead of one multi-block kernel\"\"\"\n",
-    "    pack_cuda._ensure_initialized()\n",
-    "    \n",
-    "    xyt1_gpu = cp.asarray(xyt1_np, dtype=cp.float32 if pack_cuda.USE_FLOAT32 else cp.float64)\n",
-    "    xyt2_gpu = cp.asarray(xyt2_np, dtype=cp.float32 if pack_cuda.USE_FLOAT32 else cp.float64)\n",
-    "    \n",
-    "    # Warmup\n",
-    "    for _ in range(num_blocks):\n",
-    "        totals, grads = pack_cuda.overlap_list_total(xyt1_gpu, xyt2_gpu, compute_grad=True)\n",
-    "    cp.cuda.Device().synchronize()\n",
-    "    \n",
-    "    # Timed run\n",
-    "    cp.cuda.Device().synchronize()\n",
-    "    start = time.perf_counter()\n",
-    "    for k in range(iters_per_call):\n",
-    "        for _ in range(num_blocks):\n",
-    "            totals, grads = pack_cuda.overlap_list_total(xyt1_gpu, xyt2_gpu, compute_grad=True)\n",
-    "    cp.cuda.Device().synchronize()\n",
-    "    end = time.perf_counter()\n",
-    "    \n",
-    "    elapsed = end - start\n",
-    "    return iters_per_call / elapsed, elapsed\n",
-    "\n",
-    "print(\"\\n=== Comparing multi-ensemble vs separate kernel launches (N=20) ===\")\n",
-    "print(\"Blocks\\tMulti\\tSeparate\")\n",
-    "for b in [1, 2, 4, 8, 16, 32, 64]:\n",
-    "    cps_multi, _ = run_trial(b, iters, xyt, xyt)\n",
-    "    cps_sep, _ = run_separate_kernels(b, iters, xyt, xyt)\n",
-    "    print(f\"{b}\\t{int(cps_multi)}\\t{int(cps_sep)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "b6ef0cb5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Kernel attributes:\n",
-      "  Max threads per block: 1024\n",
-      "  Num regs: 64\n",
-      "  Shared size bytes: 0\n",
-      "  Const size bytes: 144\n",
-      "  Local size bytes: 1104\n",
-      "\n",
-      "With 20 threads/block:\n",
-      "  Max blocks/SM (thread limit): 76\n",
-      "  Max active threads/SM: 1520\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Check actual kernel occupancy\n",
-    "# Try to determine how many blocks can run per SM\n",
-    "\n",
-    "# Get the kernel function\n",
-    "pack_cuda._ensure_initialized()\n",
-    "kernel = pack_cuda._multi_ensemble_kernel\n",
-    "\n",
-    "# Check kernel attributes\n",
-    "print(\"Kernel attributes:\")\n",
-    "print(f\"  Max threads per block: {kernel.max_threads_per_block}\")\n",
-    "print(f\"  Num regs: {kernel.num_regs}\")\n",
-    "print(f\"  Shared size bytes: {kernel.shared_size_bytes}\")\n",
-    "print(f\"  Const size bytes: {kernel.const_size_bytes}\")\n",
-    "print(f\"  Local size bytes: {kernel.local_size_bytes}\")\n",
-    "\n",
-    "# Calculate theoretical occupancy\n",
-    "threads_per_block = 20  # Our N\n",
-    "max_threads_per_sm = props['maxThreadsPerMultiProcessor']\n",
-    "max_blocks_per_sm_thread = max_threads_per_sm // threads_per_block\n",
-    "\n",
-    "print(f\"\\nWith {threads_per_block} threads/block:\")\n",
-    "print(f\"  Max blocks/SM (thread limit): {max_blocks_per_sm_thread}\")\n",
-    "print(f\"  Max active threads/SM: {min(max_threads_per_sm, max_blocks_per_sm_thread * threads_per_block)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b73c8e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa971ecc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5399b67b",
+   "id": "fe3cdf69",
    "metadata": {},
    "outputs": [],
    "source": []
