--- a/analysis/test_concurrent.ipynb
+++ b/analysis/test_concurrent.ipynb
@@ -36,48 +36,24 @@
       "TEST 1: Block Size Scaling (Single Stream)\n",
       "============================================================\n",
       "Blocks\tCalls/sec\tElapsed(s)\n",
-      "1\t3151\t\t0.032\n",
-      "2\t2627\t\t0.038\n",
-      "4\t2677\t\t0.037\n",
-      "8\t1676\t\t0.060\n",
-      "============================================================\n",
-      "TEST 1: Block Size Scaling (Single Stream)\n",
-      "============================================================\n",
-      "Blocks\tCalls/sec\tElapsed(s)\n",
-      "1\t3151\t\t0.032\n",
-      "2\t2627\t\t0.038\n",
-      "4\t2677\t\t0.037\n",
-      "8\t1676\t\t0.060\n",
-      "16\t1203\t\t0.083\n",
-      "32\t540\t\t0.185\n",
-      "16\t1203\t\t0.083\n",
-      "32\t540\t\t0.185\n",
-      "64\t271\t\t0.368\n",
-      "64\t271\t\t0.368\n",
-      "128\t177\t\t0.562\n",
+      "1\t4361\t\t0.023\n",
+      "2\t3476\t\t0.029\n",
+      "4\t3121\t\t0.032\n",
+      "8\t1788\t\t0.056\n",
+      "16\t1280\t\t0.078\n",
+      "32\t716\t\t0.140\n",
+      "64\t400\t\t0.250\n",
+      "128\t203\t\t0.492\n",
+      "256\t95\t\t1.052\n",
+      "512\t46\t\t2.171\n",
+      "1024\t22\t\t4.380\n",
       "\n",
       "============================================================\n",
       "TEST 2: Parallel Kernel Execution (Multiple Streams)\n",
       "============================================================\n",
       "Streams\tBlocks/Stream\tCalls/sec\tElapsed(s)\n",
-      "1\t1\t\t5045\t\t0.020\n",
-      "2\t1\t\t4443\t\t0.045\n",
-      "4\t1\t\t3763\t\t0.106\n",
-      "128\t177\t\t0.562\n",
-      "\n",
-      "============================================================\n",
-      "TEST 2: Parallel Kernel Execution (Multiple Streams)\n",
-      "============================================================\n",
-      "Streams\tBlocks/Stream\tCalls/sec\tElapsed(s)\n",
-      "1\t1\t\t5045\t\t0.020\n",
-      "2\t1\t\t4443\t\t0.045\n",
-      "4\t1\t\t3763\t\t0.106\n",
-      "8\t1\t\t4053\t\t0.197\n",
-      "8\t1\t\t4053\t\t0.197\n",
-      "16\t1\t\t4086\t\t0.391\n",
-      "16\t1\t\t4086\t\t0.391\n",
-      "32\t1\t\t3651\t\t0.876\n",
-      "32\t1\t\t3651\t\t0.876\n"
+      "1\t1024\t\t23\t\t4.341\n",
+      "2\t1024\t\t20\t\t9.616\n"
      ]
     }
    ],
@@ -156,7 +132,7 @@
     "    # Warmup\n",
     "    for stream in streams:\n",
     "        with stream:\n",
-    "            pack_cuda.overlap_multi_ensemble(xyt1_list, xyt2_list, compute_grad=True)\n",
+    "            pack_cuda.overlap_multi_ensemble(xyt1_list, xyt2_list, compute_grad=True, stream=stream)\n",
     "    cp.cuda.Device().synchronize()\n",
     "    \n",
     "    # Timed run: launch kernels on different streams (back-to-back)\n",
@@ -165,7 +141,7 @@
     "    for i in range(iters_per_stream):\n",
     "        for s_idx, stream in enumerate(streams):\n",
     "            with stream:\n",
-    "                pack_cuda.overlap_multi_ensemble(xyt1_list, xyt2_list, compute_grad=True)\n",
+    "                pack_cuda.overlap_multi_ensemble(xyt1_list, xyt2_list, compute_grad=True, stream=stream)\n",
     "    cp.cuda.Device().synchronize()\n",
     "    end = time.perf_counter()\n",
     "    \n",
@@ -185,22 +161,22 @@
     "\n",
     "cp.cuda.Device().synchronize()\n",
     "\n",
-    "# print(\"=\" * 60)\n",
-    "# print(\"TEST 1: Block Size Scaling (Single Stream)\")\n",
-    "# print(\"=\" * 60)\n",
-    "# print(\"Blocks\\tCalls/sec\\tElapsed(s)\")\n",
-    "# packs = [1, 2, 4, 8, 16, 32, 64, 128]\n",
-    "# for b in packs:\n",
-    "#     cps, t = run_trial_single_stream(b, iters, xyt, xyt)\n",
-    "#     cp.cuda.Device().synchronize()\n",
-    "#     print(f\"{b}\\t{int(cps)}\\t\\t{t:.3f}\")\n",
+    "print(\"=\" * 60)\n",
+    "print(\"TEST 1: Block Size Scaling (Single Stream)\")\n",
+    "print(\"=\" * 60)\n",
+    "print(\"Blocks\\tCalls/sec\\tElapsed(s)\")\n",
+    "packs = [1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024]\n",
+    "for b in packs:\n",
+    "    cps, t = run_trial_single_stream(b, iters, xyt, xyt)\n",
+    "    cp.cuda.Device().synchronize()\n",
+    "    print(f\"{b}\\t{int(cps)}\\t\\t{t:.3f}\")\n",
     "\n",
     "print(\"\\n\" + \"=\" * 60)\n",
     "print(\"TEST 2: Parallel Kernel Execution (Multiple Streams)\")\n",
     "print(\"=\" * 60)\n",
     "print(\"Streams\\tBlocks/Stream\\tCalls/sec\\tElapsed(s)\")\n",
-    "num_blocks_per_stream = 1  # Fixed block count\n",
-    "stream_counts = [1, 2, 4, 8, 16, 32]\n",
+    "num_blocks_per_stream = 1024  # Fixed block count\n",
+    "stream_counts = [1,2,4,8,16,32]\n",
     "for num_streams in stream_counts:\n",
     "    cps, t = run_trial_multi_stream(num_streams, iters, num_blocks_per_stream, xyt, xyt)\n",
     "    cp.cuda.Device().synchronize()\n",
